--- a/WorkflowSystem/src/main/resources/application.properties
+++ b/WorkflowSystem/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-spring.datasource.name=test
+spring.datasource.name=GraduationProject
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.106.196.105:3306/activitiFromTutor
+spring.datasource.url=jdbc:mysql://47.106.196.105:3306/GraduationProject?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=zhou
 spring.datasource.password=960925
 #使用druid数据源
