引入工具类

--- a/WorkflowSystem/pom.xml
+++ b/WorkflowSystem/pom.xml
@@ -32,6 +32,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- 引用项目 -->
+		<dependency>
+			<groupId>com.zhou</groupId>
+			<artifactId>util</artifactId>
+			<version>1.0</version>
+		</dependency>
 		<!--fast jackson -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
