--- a/MessageSystem/src/main/resources/application.properties
+++ b/MessageSystem/src/main/resources/application.properties
@@ -27,6 +27,8 @@ spring.datasource.druid.time-between-eviction-runs-millis=60000
 spring.datasource.druid.filters=stat
 
 
+#解决单独打包时报错：The bean 'XXX', defined in null, could not be registered
+spring.main.allow-bean-definition-overriding=true
 
 
 
